2000-07-24  Martin Baulig  <baulig@suse.de>

	Synced with gnome-libs/gnome-data.

2000-06-09  Martin Baulig  <martin@home-of-linux.org>

	* gnome-common.m4: We need this here as well.

2000-05-29  Martin Baulig  <baulig@suse.de>

	* Makefile.am: New file. Install this stuff into
	`$(datadir)/aclocal/gnome2-macros'.

	* gnome.m4: New file. Copied from `hack-macros' dir.

	* autogen.sh: New file. Copied from `macros' dir.
