@@ -1,5 +1,9 @@
 2000-07-24  Martin Baulig  <baulig@suse.de>
 
+	* check-utmp.m4: New file.
+
+2000-07-24  Martin Baulig  <baulig@suse.de>
+
 	Synced with gnome-libs/gnome-data.
 
 2000-06-09  Martin Baulig  <martin@home-of-linux.org>
